Add comments about runtime.java.home.

--- a/build-options.properties
+++ b/build-options.properties
@@ -21,3 +21,5 @@ version.suffix=SNAPSHOT
 # Lucene version.
 # version.release=
 
+# This property can be used to point at an alternative compilation and runtime JDK.
+# runtime.java.home=
