Add comments about runtime.java.home.

--- a/build-tools/missing-doclet/build.gradle
+++ b/build-tools/missing-doclet/build.gradle
@@ -16,34 +16,15 @@
  */
 
 plugins {
-  id 'java-library'
-  alias(deps.plugins.spotless) apply false
-  alias(deps.plugins.forbiddenapis) apply false
+  id "lucene.root-project.check-environment"
+  id "java-library"
 }
 
-repositories {
-  mavenCentral()
-}
-
-version = "1.0.0-SNAPSHOT"
 group = "org.apache.lucene.tools"
 description = 'Doclet-based javadoc validation'
 
-// Make sure the build environment is consistent.
-apply from: file('../../gradle/_to-remove/conventions.gradle')
-
-// Add spotless/ tidy.
-tasks.register("checkJdkInternalsExportedToGradle") {}
-apply from: file('../../gradle/validation/forbidden-apis.gradle')
-
-java {
-  sourceCompatibility = JavaVersion.toVersion(deps.versions.minJava.get())
-  targetCompatibility = JavaVersion.toVersion(deps.versions.minJava.get())
-}
-
-tasks.withType(JavaCompile).configureEach {
-  options.compilerArgs += ["--release", java.targetCompatibility.toString()]
-  options.encoding = "UTF-8"
-}
-
-tasks.register("tidy", {})
+tasks.register("foo", {
+  doFirst {
+    println(project.group)
+  }
+})
