--- a/build-tools/missing-doclet/settings.gradle
+++ b/build-tools/missing-doclet/settings.gradle
@@ -15,6 +15,15 @@
  * limitations under the License.
  */
 
+pluginManagement {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+    }
+
+    includeBuild("../build-tools/build-infra")
+}
+
 dependencyResolutionManagement {
     versionCatalogs {
         deps {
