--- a/gradle/documentation/render-javadoc.gradle
+++ b/gradle/documentation/render-javadoc.gradle
@@ -23,31 +23,22 @@ import org.gradle.internal.jvm.Jvm
 def resources = scriptResources(buildscript)
 
 allprojects {
-  plugins.withType(JavaPlugin) {
+  plugins.withType(JavaPlugin).configureEach {
     configurations {
       missingdoclet
     }
 
     dependencies {
-      missingdoclet "org.apache.lucene.tools:missing-doclet"
+      missingdoclet project(":lucene:build-tools:missing-doclet")
     }
 
     project.ext {
       relativeDocPath = project.path.replaceFirst(/:\w+:/, "").replace(':', '/')
     }
 
-    // We disable the default javadoc task and have our own
-    // javadoc rendering task below. The default javadoc task
-    // will just invoke 'renderJavadoc' (to allow people to call
-    // conventional task name).
-    tasks.matching { it.name == "javadoc" }.all {
-      enabled = false
-      dependsOn "renderJavadoc"
-    }
-
-    task renderJavadoc(type: RenderJavadocTask) {
-      description "Generates Javadoc API documentation for each module. This directly invokes javadoc tool."
-      group "documentation"
+    def renderJavadoc = tasks.register("renderJavadoc", RenderJavadocTask, {
+      description = "Generates Javadoc API documentation for each module. This directly invokes javadoc tool."
+      group = "documentation"
 
       taskResources = resources
       dependsOn sourceSets.main.compileClasspath
@@ -56,6 +47,15 @@ allprojects {
       releaseVersion = rootProject.minJavaVersion
 
       outputDir = project.javadoc.destinationDir
+    })
+
+    // We disable the default javadoc task and have our own
+    // javadoc rendering task below. The default javadoc task
+    // will just invoke 'renderJavadoc' (to allow people to call
+    // conventional task name).
+    tasks.named("javadoc").configure {
+      enabled = false
+      dependsOn renderJavadoc
     }
 
     if (project.path == ':lucene:luke' || !(project in rootProject.ext.mavenProjects)) {
@@ -63,11 +63,13 @@ allprojects {
       // as part of the site's creation. A side-effect of this is that javadocs would not
       // be linted for these projects. To avoid this, we connect the regular javadoc task
       // to check so that everything is validated.
-      project.tasks.getByName("check").dependsOn renderJavadoc
+      project.tasks.named("check").configure {
+        dependsOn renderJavadoc
+      }
     } else {
-      task renderSiteJavadoc(type: RenderJavadocTask) {
-        description "Generates Javadoc API documentation for the site (relative links)."
-        group "documentation"
+      tasks.register("renderSiteJavadoc", RenderJavadocTask, {
+        description = "Generates Javadoc API documentation for the site (relative links)."
+        group = "documentation"
 
         taskResources = resources
         dependsOn sourceSets.main.compileClasspath
@@ -82,7 +84,7 @@ allprojects {
         // Place the documentation under the documentation directory.
         // docroot is defined in 'documentation.gradle'
         outputDir = project.docroot.toPath().resolve(project.relativeDocPath).toFile()
-      }
+      })
     }
   }
 }
@@ -93,7 +95,7 @@ allprojects {
 def javaJavadocPackages = rootProject.file("${resources}/java21/")
 def junitJavadocPackages = rootProject.file("${resources}/junit/")
 allprojects {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     title = "Lucene ${project.version} ${project.name} API"
 
     offlineLinks += [
@@ -111,7 +113,7 @@ allprojects {
 
 // Configure project-specific tweaks and to-dos.
 configure(project(":lucene:analysis:common")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
@@ -133,7 +135,7 @@ configure([
     project(":lucene:replicator"),
     project(":lucene:spatial-extras"),
 ]) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
@@ -152,49 +154,49 @@ configure([
     project(":lucene:spatial3d"),
     project(":lucene:suggest"),
 ]) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing @param tags
     javadocMissingLevel = "method"
   }
 }
 
 configure(project(":lucene:backward-codecs")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing @param tags
     javadocMissingLevel = "method"
   }
 }
 
 configure(project(":lucene:test-framework")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
 }
 
 configure(project(":lucene:sandbox")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
 }
 
 configure(project(":lucene:spatial-test-fixtures")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
 }
 
 configure(project(":lucene:misc")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
   }
 }
 
 configure(project(":lucene:core")) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // TODO: fix missing javadocs
     javadocMissingLevel = "class"
     // some packages are fixed already
@@ -218,7 +220,7 @@ configure(project(":lucene:core")) {
 }
 
 configure(project(':lucene:demo')) {
-  project.tasks.withType(RenderJavadocTask) {
+  project.tasks.withType(RenderJavadocTask).configureEach {
     // For the demo, we link the example source in the javadocs, as it's ref'ed elsewhere
     linksource = true
   }
@@ -228,11 +230,10 @@ configure(project(':lucene:demo')) {
 // - each RenderJavaDocs task gets a dependency to all tasks with the same name in its dependencies
 // - the dependency is using dependsOn with a closure to enable lazy evaluation
 configure(subprojects) {
-  project.tasks.withType(RenderJavadocTask) { task ->
+  project.tasks.withType(RenderJavadocTask).configureEach { task ->
     task.dependsOn {
       task.project.configurations.implementation.allDependencies.withType(ProjectDependency).collect { dep ->
-        def otherProject = dep.dependencyProject
-        return otherProject.tasks.findByName(task.name)
+        return dep.path + ":" + task.name
       }
     }
   }
@@ -328,7 +329,7 @@ class RenderJavadocTask extends DefaultTask {
   private Set findRenderTasksInDependencies() {
     Set found = []
     def collectDeps
-    collectDeps = { task -> task.taskDependencies.getDependencies(task).findAll{ it.name == this.name && it.enabled && !found.contains(it) }.each{
+    collectDeps = { task -> project.gradle.taskGraph.getDependencies(task).findAll{ it.name == this.name && it.enabled && !found.contains(it) }.each{
       found << it
       collectDeps(it)
     }}
@@ -347,8 +348,14 @@ class RenderJavadocTask extends DefaultTask {
     
     def opts = []
 
-    def overviewSourceSetDir = srcDirs.filter { dir -> project.file("${dir}/overview.html").exists() }.singleFile
-    opts << [ '-overview', project.file("${overviewSourceSetDir}/overview.html") ]
+    def overviewFiles = srcDirs
+            .collect {  dir -> project.file("${dir}/overview.html") }
+            .findAll { overviewFile -> overviewFile.exists() }
+
+    if (!overviewFiles.isEmpty()) {
+      assert overviewFiles.size() == 1 : "More than one overview file?: " + overviewFiles
+      opts << ['-overview', project.file("${overviewFiles.getFirst()}/overview.html")]
+    }
 
     opts << [ '-d', outputDir ]
     opts << '-protected'
