--- a/settings.gradle
+++ b/settings.gradle
@@ -44,8 +44,6 @@ if (Boolean.parseBoolean(providers.gradleProperty("gradle.ge").orElse("true").ge
 
 rootProject.name = "lucene-root"
 
-includeBuild("build-tools/missing-doclet")
-
 include "lucene:analysis:common"
 include "lucene:analysis:icu"
 include "lucene:analysis:kuromoji"
@@ -86,3 +84,8 @@ include "lucene:spatial-extras"
 include "lucene:spatial-test-fixtures"
 include "lucene:suggest"
 include "lucene:test-framework"
+
+include "lucene:build-tools:missing-doclet"
+
+// tweak the physical path for build-tools.
+project(":lucene:build-tools:missing-doclet").projectDir = file("build-tools/missing-doclet")
