Moved missing docler's sources under the same folder layout. Initial work on porting defaults-tests.gradle.

--- a/build-options.properties
+++ b/build-options.properties
@@ -23,3 +23,10 @@ version.suffix=SNAPSHOT
 
 # This property can be used to point at an alternative compilation and runtime JDK.
 # runtime.java.home=
+
+# Default heap size for test JVMs.
+tests.heapsize=512m
+
+# Minimum heap size for test JVMs.
+tests.minheapsize=256m
+
