Converted test task setup and randomization. Possibly with regressions.

--- a/build-options.properties
+++ b/build-options.properties
@@ -1,7 +1,7 @@
 #
 # These are various build options that the Lucene build uses.
 # 
-# Values of these options are read (and can be overriden) from:
+# Values of these options are read (and can be overridden) by:
 #
 #   - cli parameters to gradlew (system properties): -DoptionKey=value
 #   - cli parameters to gradlew (gradle properties): -PoptionKey=value
@@ -21,12 +21,11 @@ version.suffix=SNAPSHOT
 # Lucene version.
 # version.release=
 
-# This property can be used to point at an alternative compilation and runtime JDK.
-# runtime.java.home=
-
-# Default heap size for test JVMs.
-tests.heapsize=512m
-
-# Minimum heap size for test JVMs.
-tests.minheapsize=256m
-
+# To see the current values of all other options, run:
+#
+# ./gradlew buildOptions
+#
+# this prints all build options for each project. You can also scope
+# this task to just one project:
+#
+# ./gradlew -p lucene/core buildOptions
