--- a/build-tools/build-infra/build.gradle
+++ b/build-tools/build-infra/build.gradle
@@ -65,6 +65,7 @@ dependencies {
   implementation gradleApi()
   implementation localGroovy()
   implementation deps.commons.codec
+  implementation deps.randomizedtesting.runner
 
   implementation plugin(deps.plugins.carrotsearch.buildinfra)
   implementation plugin(deps.plugins.forbiddenapis)
