--- a/build-tools/build-infra/src/main/groovy/lucene.java.tests-and-randomization.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.tests-and-randomization.gradle
@@ -79,62 +79,72 @@ Provider<Integer> jvmsOption = buildOptions.addIntOption("tests.jvms", "The numb
 
 // GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with newer Java versions
 Provider<Integer> upperJavaFeatureVersionOption = buildOptions.addIntOption(
-        "org.apache.lucene.vectorization.upperJavaFeatureVersion", "Min JDK feature version to configure the Panama Vectorization provider")
+    "org.apache.lucene.vectorization.upperJavaFeatureVersion", "Min JDK feature version to configure the Panama Vectorization provider")
 
 // Test reiteration, filtering and component randomization options.
 buildOptions.addIntOption("tests.iters", "Duplicate (re-run) each test case N times.")
-optionsInheritedAsProperties += [ "tests.iters" ]
+optionsInheritedAsProperties += ["tests.iters"]
 
 buildOptions.addIntOption("tests.multiplier", "Value multiplier for randomized tests.")
-optionsInheritedAsProperties += [ "tests.multiplier" ]
+optionsInheritedAsProperties += ["tests.multiplier"]
 
 buildOptions.addIntOption("tests.maxfailures", "Skip tests after a given number of failures.")
-optionsInheritedAsProperties += [ "tests.maxfailures" ]
+optionsInheritedAsProperties += ["tests.maxfailures"]
 
 buildOptions.addIntOption("tests.timeoutSuite", "Timeout (in millis) for an entire suite.")
-optionsInheritedAsProperties += [ "tests.timeoutSuite" ]
+optionsInheritedAsProperties += ["tests.timeoutSuite"]
 
 Provider<Boolean> assertsOption = buildOptions.addBooleanOption("tests.asserts", "Enables or disables assertions mode.", true)
-optionsInheritedAsProperties += [ "tests.asserts" ]
+optionsInheritedAsProperties += ["tests.asserts"]
 
 buildOptions.addBooleanOption("tests.infostream", "Enables or disables infostream logs.", false)
-optionsInheritedAsProperties += [ "tests.infostream" ]
+optionsInheritedAsProperties += ["tests.infostream"]
 
 buildOptions.addBooleanOption("tests.leaveTemporary", "Leave temporary directories after tests complete.", false)
-optionsInheritedAsProperties += [ "tests.leaveTemporary" ]
+optionsInheritedAsProperties += ["tests.leaveTemporary"]
 
 buildOptions.addOption("tests.codec", "Sets the codec tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.codec" ]
+optionsInheritedAsProperties += ["tests.codec"]
 
 buildOptions.addOption("tests.directory", "Sets the Directory implementation tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.directory" ]
+optionsInheritedAsProperties += ["tests.directory"]
 
 buildOptions.addOption("tests.postingsformat", "Sets the postings format tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.postingsformat" ]
+optionsInheritedAsProperties += ["tests.postingsformat"]
 
 buildOptions.addOption("tests.docvaluesformat", "Sets the doc values format tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.docvaluesformat" ]
+optionsInheritedAsProperties += ["tests.docvaluesformat"]
 
 buildOptions.addOption("tests.locale", "Sets the default locale tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.locale" ]
+optionsInheritedAsProperties += ["tests.locale"]
 
 buildOptions.addOption("tests.timezone", "Sets the default time zone tests should run with.", "random")
-optionsInheritedAsProperties += [ "tests.timezone" ]
+optionsInheritedAsProperties += ["tests.timezone"]
 
 buildOptions.addOption("tests.filter", "Applies a test filter (see ./gradlew :helpTests).")
-optionsInheritedAsProperties += [ "tests.filter" ]
+optionsInheritedAsProperties += ["tests.filter"]
 
 buildOptions.addBooleanOption("tests.nightly", "Enables or disables @Nightly tests.", false)
 buildOptions.addBooleanOption("tests.monster", "Enables or disables @Monster tests.", false)
 buildOptions.addBooleanOption("tests.awaitsfix", "Enables or disables @AwaitsFix tests.", false)
-optionsInheritedAsProperties += [ "tests.nightly", "tests.monster", "tests.awaitsfix" ]
+optionsInheritedAsProperties += [
+  "tests.nightly",
+  "tests.monster",
+  "tests.awaitsfix"
+]
 
-buildOptions.addBooleanOption("tests.gui", "Enables or disables @RequiresGUI tests.", provider { ->
+buildOptions.addBooleanOption("tests.gui", "Enables or disables @RequiresGUI tests.", provider {
+  ->
   return rootProject.ext.isCIBuild
 })
 
-buildOptions.addOption("tests.file.encoding", "Sets the default file.encoding on test JVM.", provider { ->
-  return RandomPicks.randomFrom(new Random(project.ext.projectSeedLong), ["US-ASCII", "ISO-8859-1", "UTF-8"])
+buildOptions.addOption("tests.file.encoding", "Sets the default file.encoding on test JVM.", provider {
+  ->
+  return RandomPicks.randomFrom(new Random(project.ext.projectSeedLong), [
+    "US-ASCII",
+    "ISO-8859-1",
+    "UTF-8"
+  ])
 })
 
 // TODO: do we still use these?
@@ -219,7 +229,7 @@ tasks.withType(Test).configureEach {
   JavaVersion runtimeJava = rootProject.ext.runtimeJavaVersion
   boolean incubatorJavaVersion = rootProject.ext.vectorIncubatorJavaVersions.contains(runtimeJava)
   boolean manualMinMajorVersion = minMajorVersion.isPresent() &&
-          Integer.parseInt(runtimeJava.majorVersion) <= minMajorVersion.get()
+      Integer.parseInt(runtimeJava.majorVersion) <= minMajorVersion.get()
   if (incubatorJavaVersion || manualMinMajorVersion) {
     jvmArgs '--add-modules', 'jdk.incubator.vector'
     if (manualMinMajorVersion) {
@@ -306,7 +316,7 @@ tasks.withType(Test).configureEach {
 // TODO: collect non-default and computed options and pass them.
 project.ext.testOptionsForReproduceLine = ""
 /*
-Commandline.quoteArgument("-P" + opt.propName + "=" + testOptionsResolved[opt.propName])
+ Commandline.quoteArgument("-P" + opt.propName + "=" + testOptionsResolved[opt.propName])
  */
 
 class LoggingFileArgumentProvider implements CommandLineArgumentProvider {
