--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ plugins {
   id "lucene.java.slowest-tests-at-end"
   id "lucene.java.show-failed-tests-at-end"
   id "lucene.java.profiling"
+  id "lucene.java.beasting"
 
   id "lucene.validation.spotless-groovy"
   id "lucene.validation.spotless-java"
@@ -148,7 +149,6 @@ apply from: file('gradle/generation/extract-jdk-apis.gradle')
 apply from: file('gradle/datasets/external-datasets.gradle')
 
 // Additional development aids.
-apply from: file('gradle/testing/beasting.gradle')
 apply from: file('gradle/testing/coverage.gradle')
 
 apply from: file('gradle/documentation/documentation.gradle')
